gitops/environments/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: boutique-dev
  labels:
    app.kubernetes.io/part-of: online-boutique
    environment: dev
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
